--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.1.14",
     "sweetalert2": "^11.4.33"
   },
   "devDependencies": {
